fix the input text wraps issue

--- a/styles/login-style.css
+++ b/styles/login-style.css
@@ -74,6 +74,7 @@ body{
     font-size: 13px;
     align-self: flex-start;
     margin-left: 5px;
+    white-space: nowrap;
 }
 
 #forgot a{
@@ -177,12 +178,8 @@ input[type="submit"]:hover{
         font-size: 24px;
     }
 
-    .user-inputs{
-        margin-right:150px;
-    }
-
     .user-inputs, #forgot {
-        font-size: 12px;
+        font-size: 11px;
     }
 
     input[type="email"],
